--- a/16.04/dockerfile
+++ b/16.04/dockerfile
@@ -1,4 +1,5 @@
 FROM --platform=$TARGETOS/$TARGETARCH ubuntu:16.04
+LABEL org.opencontainers.image.source = &quot;https://github.com/NotTimIsReal/ptero-images&quot;
 RUN adduser -D -h /home/docker docker
 USER docker
 ENV         USER=container HOME=/home/container
