--- a/16.04/dockerfile
+++ b/16.04/dockerfile
@@ -5,4 +5,4 @@ USER docker
 ENV         USER=container HOME=/home/container
 WORKDIR     /home/container
 RUN apt -y update
-RUN apt -y install git curl nodejs python3
+RUN apt -y install git curl nodejs python3 sudo
